--- a/index.html
+++ b/index.html
@@ -14,125 +14,116 @@
 
 <body>
 
-
-  <section class="row center">
-    <!-- HEADER PART -->
-    <header class="col-2">
-      <div class="site-header">
-        <div class="herder-akkount row">
-          <img src="images/akkount-icon.svg" alt="akkount-icon" width="32" height="32">
-          <div class="header-log">
-            <h2 class="header-login">Toshmat</h2>
-            <span class="header-email">toshmat@gmail.com</span>
-          </div>
-          <button class="header-btn" type="button"><i class='bx bx-chevron-down'></i></button>
+  <section class="header-part">
+    <div class="row">
+      <div class="herder-akkount row">
+        <img src="images/akkount-icon.svg" alt="akkount-icon" width="32" height="32">
+        <div class="header-log">
+          <h2 class="header-login">Toshmat</h2>
+          <span class="header-email">toshmat@gmail.com</span>
         </div>
-        <nav class="header-nav">
-          <ul class="herder-nav-list">
-            <li class="herder-nav-item">
-              <i class='bx bx-time-five'></i> <a href="#">Recents</a>
-            </li>
-            <li class="herder-nav-item">
-              <i class='bx bx-file-blank'></i> <a href="#">Drafts</a>
-            </li>
-            <hr style="width: 260px; margin: auto; margin-bottom: 10px;">
-            <li class="herder-nav-item">
-              <i class='bx bx-globe'></i> <a href="#">Community <span class="header-span-beta">Beta</span> <i
-                  class='bx bx-right-arrow-alt'></i></a>
-            </li>
-            <hr style="width: 260px; margin: auto; margin-bottom: 10px; margin-top: 10px;">
-            <li class="herder-nav-item">
-              <i class='bx bx-up-arrow-circle'></i>
-              <p>Upgrade plan for design files in teams</p>
-            </li>
-            <li class="herder-nav-item">
-              <button class="herder-nav-list-btn" type="button">Upgrade</button>
-            </li>
-            <hr style="width: 260px; margin: auto; margin-bottom: 10px;">
-            <li class="herder-nav-item">
-              <i class='bx bxs-checkbox'></i> <a href="#"><b>Max</b> </a>
-            </li>
-            <li class="herder-nav-item">
-              <a href="#">Team project</a>
-            </li>
-            <hr style="width: 260px; margin: auto; margin-bottom: 10px;">
-            <li class="herder-nav-item">
-              <i class='bx bx-plus'></i> <a href="#">Create new team</a>
-            </li>
-          </ul>
-        </nav>
-
+        <button class="header-btn" type="button"><i class='bx bx-chevron-down'></i></button>
       </div>
-    </header>
-    <!-- HEADER PART END -->
+      <div class="main-part-search">
+        <form action="https://echo.htmlacademy.ru">
+          <i class='bx bx-search'></i><label for="search">
+            <input class="input-search" type="search" id="search" placeholder="Search files, teams, or people" required>
+          </label>
+        </form>
+      </div>
+      <nav class="main-part-nav">
+        <ul class="main-part-list row middle">
+          <li><button class="main-part-btn" type="button"><img src="images/galichka.svg" alt="galichka"></button>
+          </li>
+          <li class="main-part-item"><button class="main-part-btn" type="button">
+            <span class="main-part-btn-span">T</span> <i class='bx bx-chevron-down'></i></button></li>
+        </ul>
+      </nav>
+    </div>
+  </section>
 
-    <!-- MAIN PART -->
-    <main class="col-10">
-      <div class="main-part">
-        <div class="main-header row">
-          <div class="main-part-search">
-            <form action="https://echo.htmlacademy.ru">
-              <i class='bx bx-search'></i><label for="search">
-                <input class="input-search" type="search" id="search" placeholder="Search" required>
-              </label>
-            </form>
-          </div>
-          <nav class="main-part-nav">
-            <ul class="main-part-list row middle">
-              <li><button class="main-part-btn" type="button"><img src="images/galichka.svg" alt="galichka"></button>
-              </li>
-              <li class="main-part-item"><button class="main-part-btn" type="button"><span
-                    class="main-part-btn-span">T</span> <i class='bx bx-chevron-down'></i></button></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="main-part-main">
-          <p class="main-part-text">Recently viewed</p>
+  <section class="row">
+    <div class="col-2">
+      <nav class="header-nav">
+        <ul class="herder-nav-list">
+          <li class="herder-nav-item">
+            <i class='bx bx-time-five'></i> <a href="#">Recents</a>
+          </li>
+          <li class="herder-nav-item">
+            <i class='bx bx-file-blank'></i> <a href="#">Drafts</a>
+          </li>
+          <hr style="width: 260px; margin: auto; margin-bottom: 10px;">
+          <li class="herder-nav-item">
+            <i class='bx bx-globe'></i> <a href="#">Community <span class="header-span-beta">Beta</span> <i
+                class='bx bx-right-arrow-alt'></i></a>
+          </li>
+          <hr style="width: 260px; margin: auto; margin-bottom: 10px; margin-top: 10px;">
+          <li class="herder-nav-item">
+            <i class='bx bx-up-arrow-circle'></i>
+            <p>Upgrade plan for design files in teams</p>
+          </li>
+          <li class="herder-nav-item">
+            <button class="herder-nav-list-btn" type="button">Upgrade</button>
+          </li>
+          <hr style="width: 260px; margin: auto; margin-bottom: 10px;">
+          <li class="herder-nav-item">
+            <i class='bx bxs-checkbox'></i> <a href="#"><b>Max</b> </a>
+          </li>
+          <li class="herder-nav-item">
+            <a href="#">Team project</a>
+          </li>
+          <hr style="width: 260px; margin: auto; margin-bottom: 10px;">
+          <li class="herder-nav-item">
+            <i class='bx bx-plus'></i> <a href="#">Create new team</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="col-10">
+      <div class="main-part-main">
+        <p class="main-part-text">Recently viewed</p>
       <ul class="main-new-list row middle">
-        <li class="main-new-item">
-          <div><a href="#"><i class='bx bxs-file-blank'></i></a></div>
-          <div>
-            <a href="#">
-              <h2 class="main-new-title">New design file</h2>
-              <p class="main-new-desc">Design and prototype</p>
-            </a>
-          </div>
-          <div class="main-new-plus row middle">
-            <img src="images/plus-icon.svg" alt="plus-icon" width="12" height="12">
-          </div>
-
-        </li>
-        <li class="main-new-item">
-          <div><a href="#"><i class='bx bxs-file-archive'></i></a></div>
-          <div>
-            <a href="#">
-              <h2 class="main-new-title">New FigJam file</h2>
-              <p class="main-new-desc">Whiteboard and diagram</p>
-            </a>
-          </div>
-          <div class="main-new-plus row middle">
-            <img src="images/plus-icon.svg" alt="plus-icon" width="12" height="12">
-          </div>
-
-        </li>
-
-        <li class="main-new-item">
-          <div><a href="#"><i class='bx bx-import'></i></a></div>
-          <div>
-            <a href="#">
-              <h2 class="main-new-title">New design file</h2>
-              <p class="main-new-desc">Design and prototype</p>
-            </a>
-          </div>
-        </li>
-      </ul>
+      <li class="main-new-item">
+        <div><a href="#"><i class='bx bxs-file-blank'></i></a></div>
+        <div>
+          <a href="#">
+            <h2 class="main-new-title">New design file</h2>
+            <p class="main-new-desc">Design and prototype</p>
+          </a>
+        </div>
+        <div class="main-new-plus row middle">
+          <img src="images/plus-icon.svg" alt="plus-icon" width="12" height="12">
         </div>
 
-      </div>
+      </li>
+      <li class="main-new-item">
+        <div><a href="#"><i class='bx bxs-file-archive'></i></a></div>
+        <div>
+          <a href="#">
+            <h2 class="main-new-title">New FigJam file</h2>
+            <p class="main-new-desc">Whiteboard and diagram</p>
+          </a>
+        </div>
+        <div class="main-new-plus row middle">
+          <img src="images/plus-icon.svg" alt="plus-icon" width="12" height="12">
+        </div>
 
+      </li>
+
+      <li class="main-new-item">
+        <div><a href="#"><i class='bx bx-import'></i></a></div>
+        <div>
+          <a href="#">
+            <h2 class="main-new-title">New design file</h2>
+            <p class="main-new-desc">Design and prototype</p>
+          </a>
+        </div>
+      </li>
+    </ul>
+      </div>
 
     <!-- MAIN FILES PART -->
-    <div class="main-files row between">
+    <div class="main-files row between middle">
       <div class="row middle">
         <button class="main-files-btn row middle" type="button"> Last viewed <img src="images/file-bottom-icon.svg" alt="file-bottom-icon" width="6" height="6"></button>
       </div>
@@ -141,10 +132,10 @@
       <button class="main-files-btn" type="button"><img src="images/path-svg.svg" alt="icon-box" width="24" height="24"></button>
     </div>    </div>
 
-    <ul class="main-files-list row">
+    <ul class="main-files-list row wrap">
       <li class="main-files-item">
         <div class="main-files-img">
-          <img src="https://picsum.photos/id/828/296/179" alt="photo" width="296" height="179">
+          <img src="https://picsum.photos/id/85/296/179" alt="photo" width="296" height="179">
         </div>
         <div class="main-files-main row middle">
           <div>
@@ -158,7 +149,7 @@
       </li>
       <li class="main-files-item">
         <div class="main-files-img">
-          <img src="https://picsum.photos/id/828/296/179" alt="photo" width="296" height="179">
+          <img src="https://picsum.photos/id/85/296/179" alt="photo" width="296" height="179">
         </div>
         <div class="main-files-main row middle">
           <div>
@@ -172,7 +163,7 @@
       </li>
       <li class="main-files-item">
         <div class="main-files-img">
-          <img src="https://picsum.photos/id/828/296/179" alt="photo" width="296" height="179">
+          <img src="https://picsum.photos/id/85/296/179" alt="photo" width="296" height="179">
         </div>
         <div class="main-files-main row middle">
           <div>
@@ -186,7 +177,7 @@
       </li>
       <li class="main-files-item">
         <div class="main-files-img">
-          <img src="https://picsum.photos/id/828/296/179" alt="photo" width="296" height="179">
+          <img src="https://picsum.photos/id/85/296/179" alt="photo" width="296" height="179">
         </div>
         <div class="main-files-main row middle">
           <div>
@@ -200,7 +191,7 @@
       </li>
       <li class="main-files-item">
         <div class="main-files-img">
-          <img src="https://picsum.photos/id/828/296/179" alt="photo" width="296" height="179">
+          <img src="https://picsum.photos/id/85/296/179" alt="photo" width="296" height="179">
         </div>
         <div class="main-files-main row middle">
           <div>
@@ -214,7 +205,7 @@
       </li>
       <li class="main-files-item">
         <div class="main-files-img">
-          <img src="https://picsum.photos/id/828/296/179" alt="photo" width="296" height="179">
+          <img src="https://picsum.photos/id/85/296/179" alt="photo" width="296" height="179">
         </div>
         <div class="main-files-main row middle">
           <div>
@@ -228,7 +219,7 @@
       </li>
       <li class="main-files-item">
         <div class="main-files-img">
-          <img src="https://picsum.photos/id/828/296/179" alt="photo" width="296" height="179">
+          <img src="https://picsum.photos/id/85/296/179" alt="photo" width="296" height="179">
         </div>
         <div class="main-files-main row middle">
           <div>
@@ -242,7 +233,7 @@
       </li>
       <li class="main-files-item">
         <div class="main-files-img">
-          <img src="https://picsum.photos/id/828/296/179" alt="photo" width="296" height="179">
+          <img src="https://picsum.photos/id/85/296/179" alt="photo" width="296" height="179">
         </div>
         <div class="main-files-main row middle">
           <div>
@@ -256,7 +247,7 @@
       </li>
       <li class="main-files-item">
         <div class="main-files-img">
-          <img src="https://picsum.photos/id/828/296/179" alt="photo" width="296" height="179">
+          <img src="https://picsum.photos/id/85/296/179" alt="photo" width="296" height="179">
         </div>
         <div class="main-files-main row middle">
           <div>
@@ -270,7 +261,7 @@
       </li>
       <li class="main-files-item">
         <div class="main-files-img">
-          <img src="https://picsum.photos/id/828/296/179" alt="photo" width="296" height="179">
+          <img src="https://picsum.photos/id/85/296/179" alt="photo" width="296" height="179">
         </div>
         <div class="main-files-main row middle">
           <div>
@@ -284,7 +275,7 @@
       </li>
       <li class="main-files-item">
         <div class="main-files-img">
-          <img src="https://picsum.photos/id/828/296/179" alt="photo" width="296" height="179">
+          <img src="https://picsum.photos/id/85/296/179" alt="photo" width="296" height="179">
         </div>
         <div class="main-files-main row middle">
           <div>
@@ -298,7 +289,7 @@
       </li>
       <li class="main-files-item">
         <div class="main-files-img">
-          <img src="https://picsum.photos/id/828/296/179" alt="photo" width="296" height="179">
+          <img src="https://picsum.photos/id/85/296/179" alt="photo" width="296" height="179">
         </div>
         <div class="main-files-main row middle">
           <div>
@@ -312,7 +303,7 @@
       </li>
       <li class="main-files-item">
         <div class="main-files-img">
-          <img src="https://picsum.photos/id/828/296/179" alt="photo" width="296" height="179">
+          <img src="https://picsum.photos/id/85/296/179" alt="photo" width="296" height="179">
         </div>
         <div class="main-files-main row middle">
           <div>
@@ -326,7 +317,7 @@
       </li>
       <li class="main-files-item">
         <div class="main-files-img">
-          <img src="https://picsum.photos/id/828/296/179" alt="photo" width="296" height="179">
+          <img src="https://picsum.photos/id/85/296/179" alt="photo" width="296" height="179">
         </div>
         <div class="main-files-main row middle">
           <div>
@@ -341,10 +332,10 @@
     </ul>
     <!-- MAIN FILES PART END-->
 
-    </main>
-    <!-- MAIN PART END -->
+    </div>
 
   </section>
+
 
 </body>
 
